lwip_config_headers = \
        lwipopts.h \
        mem_manager.h \
        user_config.h \
	lwip/app/dhcpserver.h \
	lwip/app/espconn.h \
	lwip/app/espconn_tcp.h \
	lwip/app/espconn_udp.h \
	lwip/app/ping.h \
	api.h \
	api_msg.h \
	arch.h \
	autoip.h \
	debug.h \
	def.h \
	dhcp.h \
	dns.h \
	err.h \
	icmp.h \
	igmp.h \
	inet.h \
	inet_chksum.h \
	init.h \
	ip.h \
	ip_addr.h \
	ip_frag.h \
	mem.h \
	memp.h \
	memp_std.h \
	netbuf.h \
	netdb.h \
	netif.h \
	netifapi.h \
	opt.h \
	pbuf.h \
	raw.h \
	sio.h \
	snmp.h \
	snmp_asn1.h \
	snmp_msg.h \
	snmp_structs.h \
	sockets.h \
	stats.h \
	sys.h \
	tcp.h \
	tcpip.h \
	tcp_impl.h \
	timers.h \
	udp.h \
	netif\etharp.h \
	netif\if_llc.h \
	netif\ppp_oe.h \
	netif\wlan_lwip_if.h \
	posix/netdb.h \
	posix/sys/socket.h
