lwip_config_headers = \
        lwipopts.h \
        mem_manager.h \
        user_config.h \
	lwip/app/dhcpserver.h \
	lwip/app/espconn.h \
	lwip/app/espconn_tcp.h \
	lwip/app/espconn_udp.h \
	lwip/app/ping.h \
	lwip/api.h \
	lwip/api_msg.h \
	lwip/arch.h \
	lwip/autoip.h \
	lwip/debug.h \
	lwip/def.h \
	lwip/dhcp.h \
	lwip/dns.h \
	lwip/err.h \
	lwip/icmp.h \
	lwip/igmp.h \
	lwip/inet.h \
	lwip/inet_chksum.h \
	lwip/init.h \
	lwip/ip.h \
	lwip/ip_addr.h \
	lwip/ip_frag.h \
	lwip/mem.h \
	lwip/memp.h \
	lwip/memp_std.h \
	lwip/netbuf.h \
	lwip/netdb.h \
	lwip/netif.h \
	lwip/netifapi.h \
	lwip/opt.h \
	lwip/pbuf.h \
	lwip/raw.h \
	lwip/sio.h \
	lwip/snmp.h \
	lwip/snmp_asn1.h \
	lwip/snmp_msg.h \
	lwip/snmp_structs.h \
	lwip/sockets.h \
	lwip/stats.h \
	lwip/sys.h \
	lwip/tcp.h \
	lwip/tcpip.h \
	lwip/tcp_impl.h \
	lwip/timers.h \
	lwip/udp.h \
	netif/etharp.h \
	netif/if_llc.h \
	netif/ppp_oe.h \
	netif/wlan_lwip_if.h \
	posix/netdb.h \
	posix/sys/socket.h \
        pp/esf_buf.h

