lib_LIBRARIES = liblwip.a

liblwip_a_SOURCES = \
	api_lib.c \
	api_msg.c \
	autoip.c \
	def.c \
	dhcp.c \
	dhcpserver.c \
	dns.c \
	err.c \
	espconn.c \
	espconn_tcp.c \
	espconn_udp.c \
	etharp.c \
	icmp.c \
	igmp.c \
	inet.c \
	inet_chksum.c \
	init.c \
	ip.c \
	ip_addr.c \
	ip_frag.c \
	mem.c \
	memp.c \
	netbuf.c \
	netdb.c \
	netif.c \
	netifapi.c \
	netio.c \
	pbuf.c \
	ping.c \
	raw.c \
	sockets.c \
	stats.c \
	sys.c \
	sys_arch.c \
	tcp.c \
	tcpip.c \
	tcp_in.c \
	tcp_out.c \
	timers.c \
	udp.c
